--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a small library providing utiltiy methods to escape and unescape HTML entities",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "make test"
   },
   "repository": {
     "type": "git",
